2004-12-16  Kevin Ryde  <user42@zip.com.au>

	* tests/ramap.test: New file, test array-map!.
	* Makefile.am (SCM_TESTS): Add it.

2004-12-09  Kevin Ryde  <user42@zip.com.au>

	* tests/numbers.test (string->number): New tests.

2004-12-06  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-1.test (alist-copy, alist-delete, break, delete, delete!,
	map, map!, span): New tests.
	(partition): New tests, by Matthias Koeppe.

2004-12-05  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-1.test (append-map, count, filter-map): New tests.

2004-09-29  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* tests/unif.test (array-equal?): New test.

2004-09-26  Kevin Ryde  <user42@zip.com.au>

	* tests/optargs.test (let-keywords, let-keywords*, let-optional,
	let-optional*): Add tests of internal defines when no bindings.

2004-09-09  Kevin Ryde  <user42@zip.com.au>

	* tests/ports.test (port-column): Further tests, of new \a \b \r.

	* tests/streams.test: New file.

2004-09-02  Kevin Ryde  <user42@zip.com.au>

	* tests/format.test (~@d): New tests.
	New tests of excess arguments now ignored.

2004-09-01  Han-Wen Nienhuys <hanwen@cs.uu.nl>, Kevin Ryde <user42@zip.com.au>

	* tests/gc.test: Exercise record in weak-values hash table, exposing a
	problem in gc.

2004-08-27  Kevin Ryde  <user42@zip.com.au>

	* tests/regexp.test (regexp-quote): New tests.

	* tests/srfi-31.test: Use define-module to keep bindings out of
	further tests.  Use-module (test-suite lib) for stand-alone operation.
	(rec): Exercise bad args.

2004-08-25  Kevin Ryde  <user42@zip.com.au>

	* and-let-star.scm (and-let*): Give #t for an empty body, per srfi-2
	spec, previously came out as an empty (begin).

2004-08-18  Kevin Ryde  <user42@zip.com.au>

	* tests/and-let-star.test, tests/receive.test: New files.
	* Makefile.am (SCM_TESTS): Add them.

2004-08-15  Marius Vollmer  <mvo@zagadka.de>

	* tests/srfi-39.test: New, from Jose A Ortega Ruiz.  Thanks!

2004-08-14  Kevin Ryde  <user42@zip.com.au>
