@@ -1,3 +1,8 @@
+2004-12-27  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* tests/eval.test (continuations): Test making a stack from a
+	continuation, and related functions.
+
 2004-12-16  Kevin Ryde  <user42@zip.com.au>
 
 	* tests/ramap.test: New file, test array-map!.
